force-app/main/default/objects/copado__Deployment__c/fields/copado__Flag_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Flag_Status__c</fullName>
    <formula>CASE( copado__Status__c, &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
&quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;)</formula>
    <label>Flag Status</label>
    <type>Text</type>
</CustomField>