force-app/main/default/objects/copado__Deployment__c/fields/copado__From_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__From_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Org</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__Org__c.CreatedById</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Deployments (From Org)</relationshipLabel>
    <relationshipName>Deployments_From_Org</relationshipName>
    <type>Lookup</type>
</CustomField>